LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/Account_Plan_Contact__c.object-meta.xml
<CustomObject>
    <label>Relationship Map</label>
    <nameField>
        <displayFormat>KAR-{0000}</displayFormat>
        <label>Key Account Relationship Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>