LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Account_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_ID__c</fullName>
    <label>Account Plan ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>