LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationship Maps</relationshipLabel>
    <relationshipName>Account_Plan_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>