LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Client_Entity_Namee__c.field-meta.xml
<CustomField>
    <fullName>Client_Entity_Namee__c</fullName>
    <formula>Client_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Entity</label>
    <type>Text</type>
</CustomField>