LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Client_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Record_Type__c</fullName>
    <formula>Client_Contact__r.Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Record Type</label>
    <type>Text</type>
</CustomField>