LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Designation2__c.field-meta.xml
<CustomField>
    <fullName>Designation2__c</fullName>
    <formula>Client_Contact__r.Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation</label>
    <type>Text</type>
</CustomField>