LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/GT_RL__c.field-meta.xml
<CustomField>
    <fullName>GT_RL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plan_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>