LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Key_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Id__c</fullName>
    <formula>CASESAFEID(Account_Plan__r.Client__c)</formula>
    <label>Key Account Id</label>
    <type>Text</type>
</CustomField>