LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/fields/Relationship_Strength_from_Introhive_H__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength_from_Introhive_H__c</fullName>
    <label>Introhive Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>