LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Plan__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Designation2__c</columns>
    <columns>GT_RL__c</columns>
    <columns>Relationship_Strength_within_LinKreta__c</columns>
    <columns>Relationship_Strength_from_Introhive_H__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>